cambio general de estilos dictados por el ux

--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,5 +1,5 @@
 <!-- Banner Section -->
 <div id="home">
-  <img src="../../../assets/leonardo-banner.jpg" alt="Banner" />
+  <img src="../../../assets/banner principal mobile.png" alt="Banner" />
 </div>
   
