--- a/src/app/components/nabvar/nabvar.component.html
+++ b/src/app/components/nabvar/nabvar.component.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
+<nav class="navbar text-white navbar-expand-lg navbar-dark">
+  <div class="container-fluid ">
     <div class="">
       <img
-        src="../../../assets/salem_final.png"
+        src="../../../assets/blanco.png"
         (click)="scrollToSection('home')"
         class="img"
       />
@@ -27,15 +27,15 @@
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
           <button
-            class="nav-link"
+            class="nav-link text-white"
             (click)="openContactModal()"
           >
             Contáctanos
           </button>
         </li>
-        <li class="nav-item">
+        <li class="nav-item text-white">
           <button
-            class="nav-link"
+            class="nav-link text-white"
             (click)="scrollToSection('seccion2')"
             (click)="navigateToSeccion2()"
           >
@@ -44,7 +44,7 @@
         </li>
         <li class="nav-item">
           <button
-            class="nav-link"
+            class="nav-link text-white"
             (click)="scrollToSection('home')"
           >
             Home
