--- a/src/app/components/nabvar/nosotros/nosotros.component.scss
+++ b/src/app/components/nabvar/nosotros/nosotros.component.scss
@@ -1,136 +1,88 @@
-.divider {
-    width: 80%;
-    height: 2px;
-    background-color: rgba(232, 232, 232, 0.0); /* Color dorado claro para la línea */
-    margin: 40px auto; /* Espacio alrededor de la línea y centrado horizontal */
-    
-  }
-  /* Ajustes para la tarjeta descriptiva */
-  .content-wrapper {
-    background: linear-gradient(to right, rgb(0, 21, 255,0.1), rgb(0, 0, 0));
-    justify-content: space-evenly;
-    padding-top: 10px;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    
-  }
-  
-  /* Imagen personalizada */
-  .custom-img {
-    width: 50%;
-    max-width: 600px;
-    height: auto ;
-    object-fit: cover;
-    border-radius: 5px;
-    /*Bordesredondeados*/transition: transform 1s cubic-bezier(0.25, 1, 0.5, 1);
-    -webkit-transition: transform 2s cubic-bezier(0.25, 1, 0.5, 1);
-    -moz-transition: transform 2s cubic-bezier(0.25, 1, 0.5, 1);
-    -ms-transition: transform 2s cubic-bezier(0.25, 1, 0.5, 1);
-    -o-transition: transform 2s cubic-bezier(0.25, 1, 0.5, 1);
+.accordion-container {
+  position: relative;
+  padding: 40px;
+  color: white;
+  text-align: center;
+  overflow: hidden; /* Asegura que no haya desplazamientos si la imagen es más grande */
 }
-  #imagesCarousel {
-    width: 50%; /* Este valor debe coincidir con el ancho de .custom-img */
-    max-width: 500px;
-    min-height: 400px; /* Ajusta este valor según la altura de tus imágenes */
-    overflow: hidden;
-  
-  }
-  .carousel-item-next .custom-img,
-  .carousel-item-prev .custom-img {
-    transform: translateX(5%) scale(0.7); /* Mueve y reduce ligeramente la imagen durante la transición */
-  }
-  
-  .carousel-item.active .custom-img {
-    transform: translateX(0) scale(1); /* Restaura la imagen cuando está activa */
-  }
-  
-  
-  .carousel-item {
-  transition: transform 1s ease-in-out !important;
-  -webkit-transition: transform 1s ease-in-out !important;
-  -moz-transition: transform 1s ease-in-out !important;
-  -ms-transition: transform 1s ease-in-out !important;
-  -o-transition: transform 1s ease-in-out !important;
-}
-  
-  /* Contenedor de texto */
-  .text-content { 
-    color: #d2d2d2	;
-    max-width: 600px; 
-    margin-bottom: 50px;
-  }
-  
-  /* Título de la sección */
-  .section-title {
-    color: #ffffff	; 
-    text-shadow: #000000 0 4px 4px;
-   /* Fuente serif para un toque formal */
-    font-size: 2.5rem; /* Tamaño de fuente más grande */
-    font-weight: bold;
-    letter-spacing: 1px; /* Espaciado entre letras para un efecto refinado */
-    text-transform: uppercase; /* Todo en mayúsculas para un impacto visual mayor */
-  
-    position: relative;
-    display: inline-block;
-    
-  }
-  
-  
-  /* Texto de la sección */
-  .section-text {
-    padding-left: 5px;
-    border-radius: 5px;
-    font-size: 1.2rem;
-    line-height: 1.8;
-    text-align: justify; /* Justifica el texto para un borde derecho uniforme */
-  }
-  
-  @media (max-width: 768px) {
-    .custom-img, #imagesCarousel {
-        width: 90%;
-        /*Laimagenyelcarruselocupanelanchocompleto*/min-height: auto;
-        /*Permitequelaalturaseaflexible*/transition: transform 1s cubic-bezier(0.25, 1, 0.5, 1);
-         /* Transición suave en el cambio de imágenes */            ;
-        -webkit-transition: transform 2s cubic-bezier(0.25, 1, 0.5, 1);
-        -moz-transition: transform 2s cubic-bezier(0.25, 1, 0.5, 1);
-        -ms-transition: transform 2s cubic-bezier(0.25, 1, 0.5, 1);
-        -o-transition: transform 2s cubic-bezier(0.25, 1, 0.5, 1);
-}
-        .content-wrapper {
-          background-color: rgba(0, 0, 0, 0.8); 
-          flex-direction: column;
-          align-items:center;
-        }
-      
-        .carousel-item-next .custom-img,
-        .carousel-item-prev .custom-img {
-          transform: translateX(10%) scale(0.5); /* Desplaza la imagen y la reduce ligeramente durante la transición */
-        }
-        
-        .carousel-item.active .custom-img {
-          transform: translateX(0) scale(1); /* Restaura la imagen a su tamaño original cuando está activa */
-        }
-      
-        .text-content {
-          text-align: center;
-          max-width: 100%;
-        }
-      
-        .section-title {
-          padding-top: 20px;
-          font-size: 2rem;
-          margin-bottom: 20px;
-          margin-right: 30px;
-        }
-      
-        .section-text {
-          font-size: 1.2rem;
-          line-height: 1;
-          margin-right: 50px;
-          padding-left: 0;
-          text-align: center;
-          color: #d2d2d2;
-        }
 
+.accordion-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Asegura que la imagen cubra todo el contenedor sin distorsión */
+  z-index: -1; /* Hace que la imagen quede detrás del contenido */
+}
+  .accordion-span{
+    font-size: bold;
+  }
+  .accordion-container h2 {
+    font-size: 50px;
+    margin-top: 5px;
+    margin-bottom: 30px;
+  }
+  
+  .accordion-item {
+    margin-left: 10px;
+    margin-bottom: 15px;
+  }
+  
+  .accordion-btn {
+    background: none;
+    border: none;
+    font-size: 22px;
+    color: white;
+    cursor: pointer;
+    padding: 10px 0;
+    text-align: left;
+    width: 100%;
+    display: flex;
+    margin-left: 15px;
+    transition: color 0.3s ease;
+  }
+  
+  .accordion-btn:hover {
+    color: #f2f2f2;
+  }
+  
+  .accordion-content {
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: max-height 0.5s ease, opacity 0.5s ease;
+  }
+  p{
+    
+    margin-left: 40px;
+    padding-right: 50px;
+  }
+  
+  .accordion-content.active {
+    max-height: 100px; /* Ajusta según el contenido */
+    opacity: 1;
+  }
+  
+  .accordion-btn i {
+
+  font-size: 24px;
+    margin-right: 10px;
+  }
+  .bt-service {
+    display: flex;               /* Utiliza flexbox para alinear el contenido */
+    justify-content: center;     /* Centra el contenido horizontalmente */
+    align-items: center;         /* Centra el contenido verticalmente */
+    height: 25px;               /* Ajusta la altura del botón según sea necesario */
+    padding: 0;                 /* Elimina el padding interno para evitar que el texto se desplace */
+    border: none;   
+    border-radius: 20px ;
+      margin-left: 10px;
+  }
+  
+  .bt-service p {
+   margin-left: 20px;
+    margin: 0;                  /* Elimina el margen del párrafo */
+    white-space: nowrap;
+    padding:10px 20px 10px 20px;        /* Evita que el texto se divida en múltiples líneas */
   }
