--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -10,8 +10,9 @@
    <!-- Cargar NuestraManeraComponent de manera diferida -->
    <ng-container *ngIf="nuestraManeraLoaded">
     <app-nuestra-manera></app-nuestra-manera>
+    <app-procesos></app-procesos>
   </ng-container>
-
+ 
   <!-- Cargar ContactComponent de manera diferida -->
   <ng-container *ngIf="contactLoaded">
     <app-contact></app-contact>
