--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,10 @@
 
 
 
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+
 
 html, body {
-    font-family: "Josefin Sans", sans-serif;
+  font-family: 'Guton', sans-serif;
     min-height: 100vh;
     scroll-behavior: smooth;
     box-sizing: border-box;
