--- a/src/app/components/nabvar/menu-item/menu-item.component.html
+++ b/src/app/components/nabvar/menu-item/menu-item.component.html
@@ -38,7 +38,8 @@
       data-bs-slide="prev"
       aria-label="Previous"
     >
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="carousel-control-prev-icon visually-hidden" aria-hidden="true"></span>
+      
     </button>
     <button
       class="carousel-control-next"
@@ -47,7 +48,8 @@
       data-bs-slide="next"
       aria-label="Next"
     >
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="carousel-control-next-icon visually-hidden" aria-hidden="true"></span>
+      
     </button>
   </div>
 </section>
