--- a/src/app/components/nabvar/menu-item/menu-item.component.scss
+++ b/src/app/components/nabvar/menu-item/menu-item.component.scss
@@ -61,6 +61,7 @@ h2.text-center {
   }
 
   .card-title{
+    font-weight: bold;
     margin-top: 20px;
     font-size: 2rem;
     margin-bottom: 20px;
@@ -82,7 +83,7 @@ h2.text-center {
   /* Color para cada card utilizando nth-child */
 
 .card-text{
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 .carousel-indicators{
 display: none;
@@ -105,7 +106,7 @@ display: none;
 .carousel-control-next {
   opacity: 0;
   pointer-events: auto;
-  display: hide;
+
 }
 
 }
