font-family, and refactor mobile, first 3 seccion ready

--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,5 +1,12 @@
-<!-- Banner Section -->
 <div id="home">
-  <img src="../../../assets/banner principal mobile.png" alt="Banner" />
+  <div class="banner-container">
+    <img src="../../../assets/banner principal mobile.png" alt="Banner" />
+    <div class="banner-content">
+      <h1>Innovación <br> & seguridad</h1>
+      <p>Nacidos en OT, con la experiencia que necesitas para un futuro digital sostenible.</p>
+      <button type="button" class="btn btn-light bt-service">
+        <a>DESCUBRE MÁS</a> 
+      </button>
+    </div>
+  </div>
 </div>
-  
