--- a/src/app/components/nabvar/personal/personal.component.html
+++ b/src/app/components/nabvar/personal/personal.component.html
@@ -1,1 +1,25 @@
-<p>personal works!</p>
+<!-- Imagen y texto adicional -->
+<div class="image-text ">
+    <img
+      src="../../../../assets/foto mobile.png"
+      alt="Imagen destacada"
+      class="image"
+    />
+    <div class="text">
+      <p>
+        Salem Technologies SAS nació de la
+        visión de dos ingenieros que, con
+        amplia experiencia en Oil & Gas,
+        decidieron crear una empresa que
+        lidera la transformación digital de la
+        industria. Tras superar los desafíos
+        globales, hoy renacemos en Uruguay,
+        más fuertes y preparados para
+        afrontar los retos del futuro.
+      </p>
+    </div>
+    <button type="button" class="btn btn-light bt-service">
+        <p>DESCUBRE TODOS LOS SERVICIOS</p> 
+</button>
+  </div>
+  
