--- a/src/app/components/nabvar/procesos/procesos.component.html
+++ b/src/app/components/nabvar/procesos/procesos.component.html
@@ -17,7 +17,7 @@
             <div class="card process-step">
               <div class="card-body">
                 <h1 class="step-number">1</h1>
-                <h4>Análisis y diagnóstico</h4>
+                <h4>Análisis <br>y diagnóstico</h4>
                 <p>Estudio de los sistemas de OT y ciberseguridad al detalle.</p>
               </div>
             </div>
@@ -29,7 +29,7 @@
               <div class="card-body">
                 <h1 class="step-number">2</h1>
                 <h4>Implementación de soluciones</h4>
-                <p>Adaptación de tecnologías avanzadas para optimización y seguridad.</p>
+                <p>Adaptación de tecnologías para optimización y seguridad.</p>
               </div>
             </div>
           </div>
@@ -39,7 +39,7 @@
             <div class="card process-step">
               <div class="card-body">
                 <h1 class="step-number">3</h1>
-                <h4>Seguimiento y soporte</h4>
+                <h4>Seguimiento <br>y soporte</h4>
                 <p>Monitoreo continuo para garantizar la efectividad y seguridad.</p>
               </div>
             </div>
