--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -10,10 +10,13 @@
    <!-- Cargar NuestraManeraComponent de manera diferida -->
    <ng-container *ngIf="nuestraManeraLoaded">
     <app-nuestra-manera></app-nuestra-manera>
-    <app-procesos></app-procesos>
   </ng-container>
- 
-  <!-- Cargar ContactComponent de manera diferida -->
+   <ng-container *ngIf="procesosLoaded">
+    <app-procesos/>
+  </ng-container>
+   <ng-container *ngIf="personalLoaded">
+    <app-personal/>
+  </ng-container>
   <ng-container *ngIf="contactLoaded">
     <app-contact></app-contact>
   </ng-container>
