--- a/src/app/components/nabvar/integraciones/nuestra-manera.component.scss
+++ b/src/app/components/nabvar/integraciones/nuestra-manera.component.scss
@@ -5,6 +5,7 @@
   margin: 0;
 }
 .text{
+  font-family: "Guton", Georgia;
   padding: 25px 19px 15px 35px;
   font-weight: 400;
   font-size:1.3rem ;
