--- a/src/app/components/nabvar/que-hacemos/nosotros.component.html
+++ b/src/app/components/nabvar/que-hacemos/nosotros.component.html
@@ -7,7 +7,7 @@
         <i [ngClass]="isOpen[0] ? 'fa-solid fa-circle-minus' : 'fa-solid fa-circle-plus'"></i><strong>CIBERSEGURIDAD OT</strong> 
       </button>
       <div class="accordion-content" [ngClass]="{ 'active': isOpen[0] }">
-        <p>Detección temprana y respuesta a amenazas de ciberseguridad.</p>
+        <p class="p1">Detección temprana y respuesta a amenazas de ciberseguridad.</p>
       </div>
     </div>
 
@@ -16,7 +16,7 @@
       <i [ngClass]="isOpen[1] ? 'fa-solid fa-circle-minus' : 'fa-solid fa-circle-plus'"></i><strong>CONSULTORÍA EN AUTOMATIZACIÓN</strong>
     </button>
     <div class="accordion-content" [ngClass]="{ 'active': isOpen[1] }">
-      <p>Soluciones para optimización y automatización de procesos industriales.</p>
+      <p class="p2">Soluciones para optimización y automatización de procesos industriales.</p>
     </div>
   </div>
 
@@ -25,7 +25,7 @@
       <i [ngClass]="isOpen[2] ? 'fa-solid fa-circle-minus' : 'fa-solid fa-circle-plus'"></i><strong>SOLUCIONES AVANZADAS</strong>
     </button>
     <div class="accordion-content" [ngClass]="{ 'active': isOpen[2] }">
-      <p>Implementación de tecnologías avanzadas para industria 4.0.</p>
+      <p class="p3">Implementación de tecnologías avanzadas para industria 4.0.</p>
     </div>
   </div>
  
