casi completo el main

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,21 +1,21 @@
-<footer class="text-white text-center py-4">
+<footer class="text-black text-center py-4">
   <div class="container">
     <!-- Redes Sociales -->
     <div class="mb-3">
-      <a href="https://facebook.com" target="_blank" class="text-white me-4">
+      <a href="https://facebook.com" target="_blank" class="text-black me-4">
         <i class="fab fa-facebook fa-lg"></i>
       </a>
-      <a href="https://twitter.com" target="_blank" class="text-white me-4">
+      <a href="https://twitter.com" target="_blank" class="text-black me-4">
         <i class="fab fa-twitter fa-lg"></i>
       </a>
-      <a href="https://instagram.com" target="_blank" class="text-white me-4">
+      <a href="https://instagram.com" target="_blank" class="text-black me-4">
         <i class="fab fa-instagram fa-lg"></i>
       </a>
       <!-- Enlace a WhatsApp -->
       <a
         href="https://wa.me/1234567890?text=Hola%20me%20gustaría%20más%20información"
         target="_blank"
-        class="text-white"
+        class="text-black"
       >
         <i class="fab fa-whatsapp fa-lg"></i>
       </a>
@@ -23,7 +23,7 @@
 
     <!-- Enlace al Email -->
     <p class="mb-0">
-      Contact us: <a href="mailto:example@example.com" class="text-white">exampleexample.com</a>
+      Contact us: <a href="mailto:example@example.com" class="text-black">exampleexample.com</a>
     </p>
 
     <!-- Derechos reservados -->
