--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -16,6 +16,7 @@
   </ng-container>
    <ng-container *ngIf="personalLoaded">
     <app-personal/>
+    <app-jefes></app-jefes>
   </ng-container>
   <ng-container *ngIf="contactLoaded">
     <app-contact></app-contact>
