--- a/src/app/components/nabvar/que-hacemos/nosotros.component.html
+++ b/src/app/components/nabvar/que-hacemos/nosotros.component.html
@@ -1,5 +1,5 @@
   <div class="accordion-container">
-    <img ngSrc="../../../../assets/contacto mobile.png" alt="" fill>
+    <img src="../../../../assets/contacto mobile.png" alt="" >
     <h2><strong>¿Qué<br> hacemos?</strong></h2>
 
     <div class="accordion-item">
