--- a/src/app/components/nabvar/contact/contact.component.html
+++ b/src/app/components/nabvar/contact/contact.component.html
@@ -1,27 +1,18 @@
-<!-- Botón de contacto -->
-<div class="back">
-<div class="container">
-  <div class="contact-form-wrapper">
-   
+
+   <div class="blank"></div>
     <div class="contact-form-container">
+      <h1>TRABAJEMOS <br>JUNTOS</h1>
       <div class="contact-form">
         <form (ngSubmit)="enviarConsulta(contactForm)" #contactForm="ngForm" novalidate>
           <div class="form-group mb-3">
-            <label for="nombre">
-              <i class="fas fa-user"></i> Nombre
-            </label>
             <input type="text" id="nombre" name="nombre" class="form-control"
-                   [(ngModel)]="consulta.nombre" #nombre="ngModel" placeholder="Juan" required>
+                   [(ngModel)]="consulta.nombre" #nombre="ngModel" placeholder="NOMBRE Y APELLIDO" required>
             <div *ngIf="nombre.invalid && nombre.touched" class="text-danger">
               El nombre es obligatorio.
             </div>
           </div>
-
           <div class="form-group mb-3">
-            <label for="email">
-              <i class="fas fa-envelope"></i> Correo Electrónico
-            </label>
-            <input type="email" id="email" name="email" placeholder="juan@gmail.com" class="form-control"
+            <input type="email" id="email" name="email" placeholder="CORREO ELECTRONICO" class="form-control"
                    [(ngModel)]="consulta.email" #email="ngModel" required email>
             <div *ngIf="email.invalid && email.touched" class="text-danger">
               Ingresa un correo electrónico válido.
@@ -29,18 +20,12 @@
           </div>
 
           <div class="form-group mb-3">
-            <label for="telefono">
-              <i class="fas fa-phone"></i> Teléfono (Opcional)
-            </label>
-            <input type="tel" id="telefono" name="telefono" placeholder="1122334455" class="form-control"
+            <input type="tel" id="telefono" name="telefono" placeholder="TELEFONO" class="form-control"
                    [(ngModel)]="consulta.telefono" #telefono="ngModel">
           </div>
 
           <div class="form-group mb-3">
-            <label for="asunto">
-              <i class="fas fa-tag"></i> Asunto
-            </label>
-            <input type="text" id="asunto" name="asunto" placeholder="Consulta de presupuesto" class="form-control"
+            <input type="text" id="asunto" name="asunto" placeholder="ASUNTO" class="form-control"
                    [(ngModel)]="consulta.asunto" #asunto="ngModel" required>
             <div *ngIf="asunto.invalid && asunto.touched" class="text-danger">
               El asunto es obligatorio.
@@ -48,22 +33,16 @@
           </div>
 
           <div class="form-group mb-3">
-            <label for="mensaje">
-              <i class="fas fa-comment-dots"></i> Mensaje
-            </label>
             <textarea id="mensaje" rows="5" name="mensaje" class="form-control"
-                      [(ngModel)]="consulta.mensaje" placeholder="Buenas tardes..." #mensaje="ngModel" required></textarea>
+                      [(ngModel)]="consulta.mensaje" placeholder="MENSAJE" #mensaje="ngModel" required></textarea>
             <div *ngIf="mensaje.invalid && mensaje.touched" class="text-danger">
               El mensaje es obligatorio.
             </div>
           </div>
-          <button type="submit" class="btn btn-primary" [disabled]="contactForm.invalid">Enviar Consulta</button>
+          <button type="submit" class="btn " [disabled]="contactForm.invalid">Enviar Consulta</button>
         </form>
       </div>
     </div>
-  </div>
-</div>
-</div>
 
 
 
