--- a/src/app/components/nabvar/contact/contact.component.scss
+++ b/src/app/components/nabvar/contact/contact.component.scss
@@ -1,83 +1,68 @@
-
-.back{
-  padding-top: 10px;
-  background: linear-gradient(to right, rgb(0, 21, 255,0.5), rgb(0, 0, 0)); 
-}
-.container {
-  display: flex;
+.blank{
+  background: #ddd;
+  height: 30px;
   width: 100%;
-  padding-bottom: 20px;
-  justify-content: center;
-  align-items: stretch; /* Asegura que los elementos hijos tengan la misma altura */
-  height: 100%; /* Asegura que el contenedor ocupe toda la altura de la ventana */
 }
-
-.contact-form-wrapper {
-  display: flex;
-  width: 100%;
-  max-width: 800px; /* Ajusta según sea necesario */
-  height: 100%; /* Asegura que el contenedor ocupe toda la altura disponible */
-}
-
-.contact-image {
-  flex: 0 0 40%;
-  display: flex;
-  align-items: center; /* Centra la imagen verticalmente dentro del contenedor */
-}
-
-.contact-image img {
-  width: 100%;
-  height: 100%; /* Asegura que la imagen tenga la misma altura que su contenedor */
-  object-fit: cover; /* Ajusta la imagen para cubrir el contenedor sin deformarse */
-  border-radius: 5px 0 0 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
 .contact-form-container {
-  background: linear-gradient(to right, rgb(152, 167, 241), rgb(212, 246, 255));
-  flex: 0 0 60%;
+  background-image: url('./../../../../assets/contacto\ mobile.png');
+  background-size: cover; /* Ajusta la imagen para que cubra toda el área */
+  background-position: center; /* Centra la imagen en el contenedor */
   padding: 20px;
-  background-color: #fff;
-  border-radius: 0 5px 5px 0;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   justify-content: center; /* Asegura que el contenido del formulario esté centrado verticalmente */
   overflow: hidden; /* Oculta cualquier contenido que se desborde */
-  max-width: 50%;
 }
-
-.contact-form {
+h1{
+  padding: 10px;
+  color: #ddd;
+  font-family: "GutonExtBd", Georgia; 
   
+}
+.contact-form {
+  background: none;
   display: flex;
   flex-direction: column;
  
 }
 
 .form-group {
+  background: none;
   display: flex;
   flex-direction: column;
  
 }
-
-.form-group label {
-  
-  display: flex;
-  align-items: center; /* Alinea el icono y el texto verticalmente */
-  margin-bottom: 5px;
-}
-
 .form-group input,
 .form-group textarea {
-  width: 100%;
+  color: white;
+  font-family: "Guton", Georgia;
+  font-weight: 600;
+  background: none;
   padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
+  border: 2px solid #ddd;
+  border-radius: 0px;
 }
-
+input::placeholder {
+  font-family: "Guton", Georgia;
+  font-weight: 600;
+  color: rgb(197, 197, 197);
+}
+textarea::placeholder{
+  font-family: "Guton", Georgia;
+  font-weight: 600;
+  color: rgb(197, 197, 197);
+}
 .form-group textarea {
   height: 100px;
   resize: vertical;
+}
+.btn{
+  background-color: #ddd !important;
+  color: blue !important; 
+  border-radius: 0px;
+  border: none;
+  font-family: "Guton", Georgia;
+  font-weight: 500;
 }
 
 
@@ -104,25 +89,5 @@ input[type="tel"] {
 }
 
 @media (max-width: 768px) {
-  .contact-form-wrapper {
-    flex-direction: column; /* Hace que la imagen esté encima del formulario */
-    height: auto; /* Permite que el contenedor se ajuste dinámicamente */
-  }
 
-  .contact-image, .contact-form-container {
-    flex: none;
-    width: 100%; /* Hace que tanto la imagen como el formulario ocupen el 100% del ancho */
-    border-radius: 0; /* Elimina los bordes redondeados en pantallas pequeñas */
-  }
-
-  .contact-image img {
-    border-radius: 0; /* Asegura que la imagen no tenga bordes redondeados en móviles */
-    height: 350px; /* Permite que la imagen se ajuste dinámicamente en pantallas más pequeñas */
-  }
-
-  .contact-form-container {
-    max-width: 100%;
-    padding: 15px; /* Reduce el padding en móviles para un mejor ajuste */
-    box-shadow: none; /* Puedes eliminar o ajustar el shadow si es necesario en pantallas pequeñas */
-  }
 }
