--- a/src/app/components/nabvar/jefes/jefes.component.html
+++ b/src/app/components/nabvar/jefes/jefes.component.html
@@ -1,1 +1,61 @@
-<p>jefes works!</p>
+<div id="teamCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="team-member text-center">
+          <img src="../../../../assets/imagen-persona.jpg" class="d-block rounded-circle mx-auto" alt="Persona 1">
+          <h3>Leonardo Gimeno</h3>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="team-member text-center">
+          <img src="../../../../assets/imagen-persona.jpg" class="d-block rounded-circle mx-auto" alt="Persona 2">
+          <h3>Leonardo Gimeno</h3>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="team-member text-center">
+          <img src="../../../../assets/imagen-persona.jpg" class="d-block rounded-circle mx-auto" alt="Persona 3">
+          <h3>Leonardo Gimeno</h3>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+      </div>
+    </div>
+  
+    <!-- Controles del carousel -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#teamCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#teamCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <h2>Confian en nosotros:</h2>
+      <!-- Fila superior con tres imágenes -->
+      <div class="col-4 text-center mb-3">
+        <img src="./../../../../assets/imagen-persona.jpg" class="img-fluid rounded-circle" alt="Persona 5">
+      </div>
+      <div class="col-4 text-center mb-3">
+        <img src="./../../../../assets/imagen-persona.jpg" class="img-fluid rounded-circle" alt="Persona 5">
+      </div>
+      <div class="col-4 text-center mb-3">
+        <img src="./../../../../assets/imagen-persona.jpg" class="img-fluid rounded-circle" alt="Persona 5">
+      </div>
+    </div>
+    
+    <div class="row justify-content-center">
+      <!-- Fila inferior con dos imágenes -->
+      <div class="col-6 text-center mb-3">
+        <img src="./../../../../assets/imagen-persona.jpg" class="img-fluid rounded-circle" alt="Persona 5">
+      </div>
+      <div class="col-6 text-center mb-3">
+        <img src="./../../../../assets/imagen-persona.jpg" class="img-fluid rounded-circle" alt="Persona 5">
+      </div>
+    </div>
+  </div>
+  
