--- a/src/app/components/nabvar/contact/contact.component.scss
+++ b/src/app/components/nabvar/contact/contact.component.scss
@@ -4,7 +4,7 @@
   width: 100%;
 }
 .contact-form-container {
-  background-image: url('./../../../../assets/contacto\ mobile.png');
+  background-image: url('./../../../../assets/que\ hacemos\ mobile.png');
   background-size: cover; /* Ajusta la imagen para que cubra toda el área */
   background-position: center; /* Centra la imagen en el contenedor */
   padding: 20px;
