--- a/src/app/components/nabvar/integraciones/nuestra-manera.component.scss
+++ b/src/app/components/nabvar/integraciones/nuestra-manera.component.scss
@@ -1,4 +1,3 @@
-
 .image{
   width: 100%;
   height: 100%;
@@ -8,8 +7,32 @@
   font-family: "Guton", Georgia;
   padding: 25px 19px 15px 35px;
   font-weight: 400;
-  font-size:1.3rem ;
+  font-size: 1.2rem;
+
 }
-@media (max-width: 768px) {
+
+@media (min-width: 768px) {
+  .image-text {
+    display: flex;              
+    width: 100%;                 
+   
+  }
   
+  .image {
+    width: 50%;                 
+    height: auto;                 
+    object-fit: cover;            
+  }
+  .text{
+    width: 50%;
+    font-family: "GutonMed", Georgia;
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+      justify-content: center;
+
+    
+  }
+ 
+
 }
