--- a/src/app/components/nabvar/menu-item/menu-item.component.html
+++ b/src/app/components/nabvar/menu-item/menu-item.component.html
@@ -3,8 +3,8 @@
   <!-- Vista en pantallas grandes -->
   <div class="row justify-content-center d-none d-md-flex">
     <div class="col-md-3 card-container" *ngFor="let card of cards; let i = index">
-      <div class="card  shadow-sm">
-        <div class="card-body">
+      <div class="card  shadow-sm h-100">
+        <div class="card-body d-flex flex-column">
           <h5 class="card-title">{{ card.title }}</h5>
           <p class="card-text">{{ card.text }}</p>
         </div>
