--- a/src/app/components/nabvar/que-hacemos/nosotros.component.html
+++ b/src/app/components/nabvar/que-hacemos/nosotros.component.html
@@ -1,6 +1,6 @@
   <div class="accordion-container">
     <img src="../../../../assets/contacto mobile.png" alt="" >
-    <h2><strong>¿Qué<br> hacemos?</strong></h2>
+    <h2><strong>¿Qué hacemos?</strong></h2>
 
     <div class="accordion-item">
       <button class="accordion-btn" (click)="toggleAccordion(0)">
@@ -28,9 +28,11 @@
       <p class="p3">Implementación de tecnologías avanzadas para industria 4.0.</p>
     </div>
   </div>
- 
-    <button type="button" class="btn btn-light bt-service">
-     <p>DESCUBRE TODOS LOS SERVICIOS</p> 
-    </button>
+ <div class="btn-container">
+  <button type="button" class="btn btn-light bt-service">
+    <a>DESCUBRE TODOS LOS SERVICIOS</a> 
+   </button>
+ </div>
+    
   
 </div>
