--- a/src/app/components/nabvar/que-hacemos/nosotros.component.scss
+++ b/src/app/components/nabvar/que-hacemos/nosotros.component.scss
@@ -1,20 +1,17 @@
+
 .accordion-container {
-  position: relative;
-  padding: 40px;
+  background-image: url('../../../../assets/contacto mobile.png');
+  background-size: cover; /* Ajusta la imagen para que cubra toda el área */
+  background-position: center; /* Centra la imagen en el contenedor */
+  padding-top: 10px;
+  padding-bottom: 20px;
   color: white;
   text-align: center;
- 
-}
-
-.accordion-container img {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Asegura que la imagen cubra todo el contenedor sin distorsión */
-  z-index: -1; /* Hace que la imagen quede detrás del contenido */
 }
+
+
   .accordion-span{
     font-size: bold;
   }
@@ -62,18 +59,7 @@
   p{
     font-family: "Guton", Georgia;
   }
-  .p1{
-  
-    margin-left: 30px;
-    padding-right: 40px;
-  }
-  .p2{
-    padding-right: 40px;
-  }
-  .p3{
-    padding-right: 30px;
-  }
-  
+
   .accordion-content.active {
     max-height: 100px; /* Ajusta según el contenido */
     opacity: 1;
@@ -168,5 +154,22 @@
   .bt-service a:hover {
     color: rgb(0, 0, 150);       /* Cambia el color al hacer hover */
   }
+ 
+  }
+  @media (min-width: 360px) {
+    p{
+      
+      .p1{
   
+        margin-left: 30px;
+      padding-right: 40px;
+      }
+      .p2{
+        padding-left: 40px !important;
+      }
+      .p3{
+        padding-right: 30px;
+      }
+    }
+    
   }
